data/derived/comb/progs/unify/prog5659.ml.out
Characters 16-35:
  let _ = sumList [1; 3; 5; 7; 9; 11];;
                  ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
